syntax = "proto3";

package pb;

option go_package = "./pb";

// base message
message Empty {
}

message IDReq {
  string id = 1;
}

message IDResp {
  string id = 1;
}

message IDsReq {
  repeated string ids = 1;
}

message UUIDsReq {
  repeated string ids = 1;
}

message UUIDReq {
  string id = 1;
}

message BaseResp {
  string msg = 1;
}

message PageInfoReq {
  uint64 page = 1;
  uint64 page_size = 2;
}

message StatusCodeReq {
  string id = 1;
  int64 status = 2;
}

message StatusCodeUUIDReq {
  string id = 1;
  int64 status = 2;
}

// tenant message

message CreateOrUpdateTenantReq {
  string id = 1;
  string parent_id = 2;
  string name = 3;
  string contact = 4;
  string mobile = 5;
  uint32 sort_no = 6;
  int64 start_time = 7;
  int64 end_time = 8;
  uint32 status = 9;
}

message TenantInfo {
  string id = 1;
  string parent_id = 2;
  string name = 3;
  string contact = 4;
  string mobile = 5;
  uint32 sort_no = 6;
  uint32 status = 7;
  uint32 leaf = 8;
  int64 start_time = 9;
  int64 end_time = 10;
  int64 created_at = 11;
  int64 updated_at = 12;
}

message TenantListReq {
  string user_id = 1;
  string parent_id = 2;
}

message TenantListResp {
  repeated TenantInfo data = 1;
}

message TenantTreeInfo {
  string id = 1;
  string parent_id = 2;
  string name = 3;
  uint32 level = 4;
  string contact = 5;
  string mobile = 6;
  uint32 sort_no = 7;
  int64 start_time = 8;
  int64 end_time = 9;
  uint32 status = 10;
  bool leaf = 11;
  int64 created_at = 12;
  int64 updated_at = 13;
  repeated TenantTreeInfo children = 14;
}

message TenantTreeListResp {
  repeated TenantTreeInfo data = 1;
}

// user message

message LoginReq {
  string username = 1;
  string password = 2;
}

message LoginResp {
  string id = 1;
  string role_name = 2;
  string role_value = 3;
  string role_id = 4;
}

message ChangePasswordReq {
  string id = 1;
  string old_password = 2;
  string new_password = 3;
}

message CreateOrUpdateUserReq {
  string id = 1;
  string avatar = 2;
  string role_id = 3;
  string mobile = 4;
  string email = 5;
  int64 status = 6;
  string username = 7;
  string nickname = 8;
  string password = 9;
}

message UserInfoResp {
  string id = 1;
  string avatar = 2;
  string role_id = 3;
  string mobile = 4;
  string email = 5;
  int64 status = 6;
  string username = 7;
  string nickname = 8;
  string role_name = 9;
  int64 created_at = 10;
  int64 updated_at = 11;
  string role_value = 12;
}

message UserListResp {
  uint64 total = 1;
  repeated UserInfoResp data = 2;
}

message GetUserListReq {
  uint64 page = 1;
  uint64 page_size = 2;
  string username = 3;
  string nickname = 4;
  string email = 5;
  string mobile = 6;
  string role_id = 7;
}

message UpdateProfileReq {
  string id = 1;
  string nickname = 2;
  string email = 3;
  string mobile = 4;
  string avatar = 5;
}

// menu messages

message CreateOrUpdateMenuReq {
  string id = 1;
  string parent_id = 2;
  string path = 3;
  string name = 4;
  string redirect = 5;
  string component = 6;
  uint32 sort = 7;
  bool disabled = 8;
  Meta meta = 9;
  uint32 level = 10;
  uint32 menu_type = 11;
}

message MenuInfo {
  string id = 1;
  int64 created_at = 2;
  int64 updated_at = 3;
  uint32 level = 4;
  string parent_id = 5;
  string path = 6;
  string name = 7;
  string redirect = 8;
  string component = 9;
  uint32 sort = 10;
  bool disabled = 11;
  Meta meta = 12;
  repeated MenuInfo children = 13;
  uint32 menu_type = 14;
}

message Meta {
  string title = 1;
  string icon = 2;
  bool hide_menu = 3;
  bool hide_breadcrumb = 4;
  string current_active_menu = 5;
  bool ignore_keep_alive = 6;
  bool hide_tab = 7;
  string frame_src = 8;
  bool carry_param = 9;
  bool hide_children_in_menu = 10;
  bool affix = 11;
  uint32 dynamic_level = 12;
  string real_path = 13;
}

message MenuInfoList {
  uint64 total = 1;
  repeated MenuInfo data = 2;
}

message MenuRoleInfo {
  string id = 1;
  string menu_id = 2;
  string role_id = 3;
}

message MenuRoleListResp {
  uint64 total = 1;
  repeated MenuRoleInfo data = 2;
}

message CreateOrUpdateMenuParamReq {
  string id = 1;
  string menu_id = 2;
  string type = 3;
  string key = 4;
  string value = 5;
}

message MenuParamResp {
  string id = 1;
  string type = 3;
  string key = 4;
  string value = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

message MenuParamListResp {
  uint64 total = 1;
  repeated MenuParamResp data = 2;
}

// role messages

message RoleInfo {
  string id = 1;
  string name = 2;
  string value = 3;
  string default_router = 4;
  int64 status = 5;
  string remark = 6;
  uint32 sort = 7;
  int64 create_time = 8;
}

message RoleListResp {
  uint64 total = 1;
  repeated RoleInfo data = 2;
}



// casbin
message UpdatePolicyReq {
  string role_id = 1;
  repeated PolicyPartInfo rules = 2;
}

message PolicyPartInfo {
  string path = 1;
  string method = 2;
}

message CreatePolicyReq {
  string role_id = 1;
  PolicyPartInfo info = 2;
}

// api message
message ApiInfo {
  string id = 1;
  int64 created_at = 2;
  int64 updated_at = 3;
  string path = 4;
  string description = 5;
  string group = 6;
  string method = 7;
}

message ApiListResp {
  uint64 total = 1;
  repeated ApiInfo data = 2;
}

message ApiPageReq {
  uint64 page = 1;
  uint64 page_size = 2;
  string path = 3;
  string description = 4;
  string method = 5;
  string group = 6;
}

// authorization message
message RoleMenuAuthorityReq {
  string role_id = 1;
  repeated uint64 menu_ids = 2;
}
// return the role's authorization menu's ids
message RoleMenuAuthorityResp {
  repeated uint64 menu_ids = 1;
}

service Init {
  rpc InitDatabase (Empty) returns (BaseResp);
}

service Tenant {
  rpc CreateOrUpdateTenant (CreateOrUpdateTenantReq) returns (IDResp);
  rpc DeleteTenant(UUIDReq) returns (BaseResp);
  rpc GetTenantTreeList (TenantListReq) returns (TenantListResp);
}

service User {
  rpc Login(LoginReq) returns (LoginResp);
  rpc ChangePassword (ChangePasswordReq) returns (BaseResp);
  rpc CreateOrUpdateUser (CreateOrUpdateUserReq) returns (BaseResp);
  rpc GetUserById (UUIDReq) returns (UserInfoResp);
  rpc GetUserList (GetUserListReq) returns (UserListResp);
  rpc DeleteUser (UUIDReq) returns (BaseResp);
  rpc BatchDeleteUser (UUIDsReq) returns (BaseResp);
  rpc UpdateProfile (UpdateProfileReq) returns (BaseResp);
  rpc UpdateUserStatus (StatusCodeUUIDReq) returns (BaseResp);
}

service Menu {
  rpc CreateOrUpdateMenu (CreateOrUpdateMenuReq) returns (BaseResp);
  rpc DeleteMenu (IDReq) returns (BaseResp);
  rpc GetMenuListByRole (IDReq) returns (MenuInfoList);
  rpc GetMenuList (PageInfoReq) returns (MenuInfoList);
  rpc CreateOrUpdateMenuParam (CreateOrUpdateMenuParamReq) returns (BaseResp);
  rpc DeleteMenuParam (IDReq) returns (BaseResp);
  rpc GetMenuParamListByMenuId (IDReq) returns (MenuParamListResp);
}

service Role {
  rpc CreateOrUpdateRole (RoleInfo) returns (BaseResp);
  rpc DeleteRole (IDReq) returns (BaseResp);
  rpc GetRoleById (IDReq) returns (RoleInfo);
  rpc GetRoleList (PageInfoReq) returns (RoleListResp);
  rpc UpdateRoleStatus (StatusCodeReq) returns (BaseResp);
}

service Api {
  rpc CreateOrUpdateApi (ApiInfo) returns (BaseResp);
  rpc DeleteApi (IDReq) returns (BaseResp);
  rpc GetApiList (ApiPageReq) returns (ApiListResp);
}

service Auth {
  rpc GetMenuAuthority (IDReq) returns (RoleMenuAuthorityResp);
  rpc CreateOrUpdateMenuAuthority (RoleMenuAuthorityReq) returns (BaseResp);
}
